# Midis-Touch

./: Cargo.toml  LICENSE  build.sh
soundfonts/: 60kb_font.sf2
src/: lib.rs  main.rs  soundfonts.rs
