[package]
name = "midis-touch"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
rustysynth = "1.3.1"
tinyaudio = "0.1.4"

[features]
default = [ "1mb_font" ]
60kb_font = [ ]
100kb_font = [ ]
200kb_font = [ ]
1mb_font = [ ]
7mb_font = [ ]
