[package]
name = "midis-touch"
version = "0.1.0"
edition = "2021"

# We're using a 'fork' of Rustysynth right now.
[patch.crates-io]
rustysynth = { path = "rustysynth" }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
midir = "0.10.0"
midly = "0.5.3"
rustysynth = "1.3.1"
tinyaudio = "0.1.4"

[features]
default = [ "1mb_font" ]
60kb_font = [ ]
100kb_font = [ ]
200kb_font = [ ]
1mb_font = [ ]
7mb_font = [ ]
# Uses the file at '/root/custom_font.sf2', placed next to 'Cargo.toml'.
custom_font = [ ]
